--- a/index.html
+++ b/index.html
@@ -30,15 +30,15 @@
         <label for="field1">Field 1 Content:</label>
         <select id="appointment_newAppointmentForm_fields_1__content" name="appointment_newAppointmentForm_fields_1__content">
             <option value="">Select an option</option>
-            <option value="Option1">Option 1</option>
-            <option value="Option2">Option 2</option>
+            <option value="Option1">Europe</option>
+            <option value="Option2">Sindh</option>
         </select><br><br>
         
         <label for="field2">Field 2 Content:</label>
         <select id="appointment_newAppointmentForm_fields_2__content" name="appointment_newAppointmentForm_fields_2__content">
             <option value="">Select an option</option>
-            <option value="Option1">Option 1</option>
-            <option value="Option2">Option 2</option>
+            <option value="option 1">India</option>
+            <option value="option 2">Pakistan</option>
         </select><br><br>
         
         <div class="input text s">
