--- a/index.html
+++ b/index.html
@@ -65,6 +65,6 @@
     <input type="text" name="captchaText" value="" id="appointment_newAppointmentForm_captchaText" class="input text s" onkeypress="checkKey(event)"/></div> </div>
     <input type="submit" value="Submit" id="appointment_newAppointmentForm_appointment_addAppointment" name="action:appointment_addAppointment"/>  
 </form>
-    <a href="https://www.google.com.pk">Available</a>
+<!--     <a href="https://www.google.com.pk">Available</a> -->
 </body>
 </html>
