--- a/index.html
+++ b/index.html
@@ -258,12 +258,14 @@ Booking of appointments for visa for master and research programs
 			        	return false;
 			        }
 			    }
+				    
 			      </script>
+	<script id="setmore_script" type="text/javascript" src="https://storage.googleapis.com/fullintegration-live/webComponentAppListing/Container/setmoreIframeLive.js"></script>
 			<div class="input submit left">
 	<input type="submit" value="Submit" id="appointment_newAppointmentForm_appointment_addAppointment" name="action:appointment_addAppointment">
 <input type="submit" value="Cancel" id="appointment_newAppointmentForm_appointment_cancelAddAppointment" name="action:appointment_cancelAddAppointment">
 </div>      
-
+<a style="float:none; " id="Setmore_button_iframe"  href="https://booking.setmore.com/scheduleappointment/c2e7e8d8-b01b-4dd4-a772-5ac1c05d51a1"><img border="none" src="https://assets.setmore.com/setmore/images/2.0/Settings/book-now-black.svg" alt="Book an appointment with Europe Niklo using Setmore"/></a>
 		
 		</form>
 
