--- a/index.html
+++ b/index.html
@@ -22,6 +22,10 @@
 </head>
 <body cz-shortcut-listen="true">
 <div id="global">
+	<a href="1" class="cb-connect-close-sidebar-button">this</a>
+	<a href="2" class="cb-connect-close-sidebar-button">this</a>
+	<a href="3" class="cb-connect-close-sidebar-button">this</a>
+	<a href="4" class="cb-connect-close-sidebar-button">this</a>
 
 	<div id="header">
 	
